--- a/k-median/intro.tex
+++ b/k-median/intro.tex
@@ -1,15 +1,15 @@
 Nessa seção falaremos sobre a versão métrica do problema das $k$-medianas. 
 O problema das $k$-medianas métrico consiste em, dado um conjunto de instalações $F$, um conjunto de clientes $D$, uma métrica $c : F \times D \rightarrow \mathbb{R}$ e um inteiro $k$, encontrar $S \subseteq F$ com $|S| \leq k$ que minimize custo$(S) \coloneqq \sum_{j \in D} \min_{i \in S} c_{ij}$.
 
-Antes de falarmos sobre algoritmos de aproximação para o problema das $k$-medianas, vamos mostrar que, assumindo $P \neq \NP$, não existe algoritmo polinomial que resolva esse problema, ou seja, vamos mostrar que ele é $\NP$-difícil mesmo na versão métrica. Vamos fazer uma redução do problema da cobertura de conjuntos na sua versão de decisão para o problema das $k$-medianas.
+Antes de falarmos sobre algoritmos de aproximação para o problema das $k$-medianas, vamos mostrar que, assumindo que $P \neq \NP$, não existe algoritmo polinomial que resolva esse problema. Mais forte que isso, vamos mostrar que a versão métrica do problema é $\NP$-difícil. Vamos fazer uma redução do problema da cobertura de conjuntos na sua versão de decisão para o problema das $k$-medianas métrico.
 
 \begin{theorem}
-O problema das $k$-medianas é $\NP$-difícil.
+O problema das $k$-medianas métrico é $\NP$-difícil.
 \end{theorem}
 \begin{proof}
-Seja $I(E,\{S_1,\ldots,S_m\},k)$ uma instância do problema da cobertura de conjuntos na versão de decisão. Vamos definir o conjunto de instalações $F \coloneqq [m]$, o conjunto de clientes $D \coloneqq E$ e a função de custo $c_{ij} \coloneqq 1$ se $j \in S_i$ e $c_{ij} \coloneqq 3$ caso contrário para cada $i \in F$ e $j \in D$. Assim, temos uma instância $I' \coloneqq (F,D,c,k)$ para o problema das $k$-medianas. É fácil notar que essa é uma instância da versão métrica do problema. Então, vamos mostrar que a resposta para $I$ é sim se e somente se $\opt(I') = |D|$. Antes, note que $\opt(I') \geq |D|$, uma vez que $c_{ij} \geq 1$ para todo $i \in F$ e $j\in D$.
+Seja $I \coloneqq (E,\{S_1,\ldots,S_m\},k)$ uma instância da versão de decisão do problema da cobertura de conjuntos. Vamos definir o conjunto de instalações $F \coloneqq [m]$, o conjunto de clientes $D \coloneqq E$ e a função de custo $c_{ij} \coloneqq 1$ se $j \in S_i$ e $c_{ij} \coloneqq 3$ caso contrário, para cada $i \in F$ e $j \in D$. Assim, temos uma instância $I' \coloneqq (F,D,c,k)$ para o problema das $k$-medianas. É fácil notar que essa corresponde a uma instância métrica do problema. Então, vamos mostrar que a resposta para $I$ é sim se e somente se $\opt(I') = |D|$. Antes, note que $\opt(I') \geq |D|$, uma vez que $c_{ij} \geq 1$ para todo $i \in F$ e $j\in D$.
 
-Vamos mostrar que se a resposta para $I$ é sim, então $\opt(I') = |D|$. Como a resposta para $I$ é sim, então existem $k$ elementos de $\{S_1,\ldots,S_m\}$ tal que a união deles é igual a $E$. Vamos supor sem perda de generalidade que esses elementos são os $k$ primeiros. Seja $F' \coloneqq [k]$. A solução de $I'$ em que abrimos as instalações em $F'$ tem custo $|D|$, uma vez que para cada cliente $j$ temos que $j \in E = \bigcup_{i= 1}^k S_i$, então existe $i \in [k]$ tal que $j \in S_i$ e, consequentemente, $c_{ij} = 1$. Portanto, $\opt(I') \leq |D|$, como ja sabemos que $\opt(I') \geq |D|$, então $opt(I') = |D|$.
+Vamos mostrar que se a resposta para $I$ é sim, então $\opt(I') = |D|$. Como a resposta para $I$ é sim, então existem $k$ elementos de $\{S_1,\ldots,S_m\}$ tal que a união deles é igual a $E$. Vamos supor sem perda de generalidade que esses elementos são os $k$ primeiros. Seja $F' \coloneqq [k]$. A solução de $I'$ em que abrimos as instalações em $F'$ tem custo $|D|$, uma vez que para cada cliente $j$ temos que $j \in E = \bigcup_{i= 1}^k S_i$. Então existe $i \in [k]$ tal que $j \in S_i$ e, consequentemente, $c_{ij} = 1$. Portanto, $\opt(I') \leq |D|$. Como já sabemos que $\opt(I') \geq |D|$, então $\opt(I') = |D|$.
 
-Agora vamos mostrar que se $opt(I') = |D|$, então a resposta para $I$ é sim. Como $opt(I') = |D|$, então existe um conjunto $S \subseteq F$ de tamanho $k$ tal que para todo cliente $j$ existe uma instalação $i \in F'$ tal que $c_{ij} = 1$ e, consequentemente, $j \in S_i$. Como isso vale para todo cliente $i \in D$, então a união dos subconjuntos referentes às instalações em $F'$ é uma cobertura de conjuntos de $E$ com tamanho $k$. Portanto, a resposta para $I$ é sim.
+Agora vamos mostrar que se $\opt(I') = |D|$, então a resposta para $I$ é sim. Como $\opt(I') = |D|$, então existe um conjunto $F' \subseteq F$ de tamanho $k$ tal que para todo cliente $j$ existe uma instalação $i \in F'$ tal que $c_{ij} = 1$ e, consequentemente, $j \in S_i$. Como isso vale para todo cliente $j \in D$, então a união dos conjuntos referentes às instalações em $F'$ é uma cobertura de conjuntos de $E$ com tamanho $k$. Portanto, a resposta para $I$ é sim.
 \end{proof}
